--- a/templates/admin/views/categorias/formulario.html
+++ b/templates/admin/views/categorias/formulario.html
@@ -1,35 +1,40 @@
 {% extends "dashboard.html" %}
 
 {% block conteudo %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="{{url('admin/dashboard')}}">
+                Home
+            </a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+            Categorias
+        </li>
+    </ol>
+</nav>
 <div class="card border-0 shadow-sm">
-  <div class="card-body">
-    
-    <form action="{{url('admin/categorias/cadastrar')}}" method="post">
-      <div class="mb-3">
-        <label for="titulo" class="form-label">Titulo</label>
-        <input type="text" name="titulo"class="form-control" id="titulo" >
-      </div>
-      
-      <div class="mb-3">
-        <label for="texto" class="form-label">Texto</label>
-        <textarea name="texto" class="form-control" id="texto" rows="3"></textarea>
-      </div>
+    <div class="card-body">
+        <form action="{% if categoria.id %}{{url('admin/categorias/editar/'~categoria.id)}}{%else%}{{url('admin/categorias/cadastrar')}}{%endif%}" method="post">
+            <div class="mb-3">
+                <label for="titulo" class="form-label">Título</label>
+                <input type="text" name="titulo" id="titulo" value="{{categoria.titulo}}" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="texto" class="form-label">Texto</label>
+                <textarea name="texto" id="texto" class="form-control" rows="3">{{categoria.texto}}</textarea>
+            </div>
 
-      <div class="mb-3">
-        <select class="form-select" name="status">
-          <option value="1">Ativo</option>
-          <option value="0">Desativado</option>
-        </select>
-      </div>
-
-      <input type="submit" class="btn btn-primary" value="Cadastrar">
-
-    </form>
-  </div>
-
-
-
-
+            <div class="mb-3">
+                <select class="form-select" name="status">
+                <option value="1" {% if categoria.status == '1' %}selected{%endif%}>Ativo</option>
+                <option value="0" {% if categoria.status == '0' %}selected{%endif%}>Inativo</option>
+            </select>
+            </div>
+            
+            <input type="submit" class="btn btn-primary" value="{% if categoria.id %}Atualizar{%else%}Cadastrar{%endif%}">
+        </form>
+    </div>    
 </div>
 </div>
 {% endblock %}
