--- a/templates/admin/views/categorias/listar.html
+++ b/templates/admin/views/categorias/listar.html
@@ -18,6 +18,7 @@
         <a href="{{url('admin/categorias/cadastrar')}}" class="btn btn-primary">Cadastrar</a>
     </div>
     <div class="card-body">
+        Total de categorias {{total.total}} - ativos {{total.ativo}} - inativos {{total.inativo}}
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
