--- a/templates/admin/views/categorias/listar.html
+++ b/templates/admin/views/categorias/listar.html
@@ -14,11 +14,18 @@
     </ol>
 </nav>
 <div class="card border-0 shadow-sm">
-    <div class="card-header bg-white border-0">
-        <a href="{{url('admin/categorias/cadastrar')}}" class="btn btn-primary">Cadastrar</a>
+    <div class="card-header bg-white border-0 d-flex justify-content-between align-items-center">
+        <div>
+            <span class="badge rounded text-bg-secondary">{{total.categorias}} categorias</span> 
+            <span class="badge rounded text-bg-success">{{total.categoriasAtiva}} ativa</span> 
+            <span class="badge rounded text-bg-danger">{{total.categoriasInativa}} inativa</span> 
+        </div>
+
+        <a href="{{url('admin/categorias/cadastrar')}}" class="btn btn-dark" tooltip="tooltip" title="Cadastrar Categoria">
+            Cadastrar
+        </a>
     </div>
     <div class="card-body">
-        Total de categorias {{total.total}} - ativos {{total.ativo}} - inativos {{total.inativo}}
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
@@ -26,7 +33,7 @@
                         <th>id</th>
                         <th>Título</th>
                         <th class="text-center">Status</th>
-                        <th>Ação</th>
+                        <th class="text-center">Ação</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -42,8 +49,12 @@
                             {% endif %}
                         </td>
                         <td class="text-center">
-                             <a href="{{ url('admin/categorias/editar/'~categoria.id) }}">Editar</a>
-                             <a href="{{ url('admin/categorias/deletar/'~categoria.id) }}">Deletar</a>
+                            <a href="{{ url('admin/categorias/editar/'~categoria.id) }}" tooltip="tooltip" title="Editar">
+                                <i class="fa-solid fa-pen m-1"></i>
+                            </a>
+                            <a href="{{ url('admin/categorias/deletar/'~categoria.id) }}" tooltip="tooltip" title="Deletar">
+                                <i class="fa-solid fa-trash m-1"></i>
+                            </a>
                         </td>
                     </tr>
                     {%endfor%}
