--- a/templates/admin/views/posts/listar.html
+++ b/templates/admin/views/posts/listar.html
@@ -13,13 +13,21 @@
         </li>
     </ol>
 </nav>
-{{flash()}}
+
+{{ flash() }}
+
 <div class="card border-0 shadow-sm">
-    <div class="card-header bg-white border-0">
-        <a href="{{url('admin/posts/cadastrar')}}" class="btn btn-primary">Cadastrar</a>
+    <div class="card-header bg-white border-0 d-flex justify-content-between align-items-center">
+         <div>
+            <span class="badge rounded text-bg-secondary">{{total.posts}} posts</span> 
+            <span class="badge rounded text-bg-success">{{total.postsAtivo}} ativo</span> 
+            <span class="badge rounded text-bg-danger">{{total.postsInativo}} inativo</span> 
+        </div>
+        <a href="{{url('admin/posts/cadastrar')}}" class="btn btn-dark" tooltip="tooltip" title="Cadastrar Post">
+            Cadastrar
+        </a>
     </div>
     <div class="card-body">
-        Total de posts {{total.total}} - ativos {{total.ativo}} - inativos {{total.inativo}}
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
@@ -43,8 +51,14 @@
                             {% endif %}
                         </td>
                         <td class="text-center">
-                            <a href="{{ url('admin/posts/editar/'~post.id) }}">Editar</a>
-                            <a href="{{ url('admin/posts/deletar/'~post.id) }}">Deletar</a>
+
+                            <a href="{{ url('admin/posts/editar/'~post.id) }}" tooltip="tooltip" title="Editar">
+                                <i class="fa-solid fa-pen m-1"></i>
+                            </a>
+                            <a href="{{ url('admin/posts/deletar/'~post.id) }}" tooltip="tooltip" title="Deletar">
+                                <i class="fa-solid fa-trash m-1"></i>
+                            </a>
+
                         </td>
                     </tr>
                     {%endfor%}
